[package]
name = "task-mon"
version = "0.1.0"
authors = ["Michael Diamond <dimo414@gmail.com>"]
description = "CLI to execute commands and log results to healthchecks.io"
repository = "http://github.com/dimo414/task-mon"
license = "MIT OR Apache-2.0"
keywords = ["cron", "healthcheck", "healthchecks", "heartbeat", "monitoring"]
categories = ["command-line-utilities", "development-tools::debugging"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.*",
    "README.md",
]

[dependencies]
clap = { version = "2.33.3", default_features = false, features = ["vec_map"] }
subprocess = "0.2.6"
ureq = { git = "https://github.com/algesten/ureq", branch = "main" }  # waiting for #311 to be released

[dev-dependencies]
mockito = "0.29.0"
parameterized_test = "0.1"
