[package]
name = "task-mon"
version = "0.1.0"
authors = ["Michael Diamond <dimo414@gmail.com>"]
description = "CLI to execute commands and log results to healthchecks.io"
repository = "http://github.com/dimo414/task-mon"
license = "MIT"
keywords = ["cron", "healthcheck", "healthchecks", "heartbeat", "monitoring"]
categories = ["command-line-utilities", "development-tools::debugging"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.*",
    "README.md",
    "LICENSE",
]

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored
static_ssl = ['openssl/vendored']

[dependencies]
clap = { version = "2.33.3", default_features = false, features = ["vec_map"] }
subprocess = "0.2.6"
ureq = { git = "https://github.com/algesten/ureq", branch = "main" }  # waiting for #311 to be released

[dependencies.openssl]
optional = true
version = '0.10'

[dev-dependencies]
mockito = "0.29.0"
parameterized_test = "0.1"
